--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
   position: relative;
-  height: 95vh;
+  height: 85vh;
   user-select: none;
   @include mqRespond(tab-port) {
     height: 100vh;
@@ -12,7 +12,9 @@
     ),
     url('../img/hero-small.jpg');
 
-  @media (min-resolution: 192dpi) {
+  @media screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+    screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    screen and (min-width: 75em) {
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8),
@@ -24,9 +26,12 @@
   background-size: cover;
   background-position: top;
 
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  @include mqRespond(tab-port) {
-    clip-path: polygon(0 0, 100% 0, 100% 92vh, 0 100%);
+  @supports (clip-path: none) and (-webkit-clip-path: none) {
+    height: 95vh;
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    @include mqRespond(tab-port) {
+      clip-path: polygon(0 0, 100% 0, 100% 92vh, 0 100%);
+    }
   }
 
   &__logo-box {
