--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,6 +7,11 @@ body {
   text-decoration: none;
 }
 
+h1,
+h2 {
+  user-select: none;
+}
+
 .heading-primary {
   color: $color-white;
   text-transform: uppercase;
