--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -83,6 +83,7 @@
     color: $color-primary;
     border-bottom: 1px solid $color-primary;
     transition: all 0.2s;
+    user-select: none;
   }
 
   &:hover {
