--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -5,6 +5,12 @@
   height: 100vh;
   width: 100%; //positioning children as absolute will otherwise collapse this container
   background-color: rgba($color-black, 0.8);
+  @supports (backdrop-filter: blur(10px)) or
+    (-webkit-backdrop-filter: blur(10px)) {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba($color-black, 0.7);
+  }
   z-index: 99;
   opacity: 0;
   visibility: hidden;
