--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -58,7 +58,7 @@
       background: $color-black;
       border-color: $color-primary-light;
       color: $color-white;
-      transform: scale(0.9);
+      // transform: scale(0.9);
       box-shadow: $box-shadow-medium;
     }
 
