--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,3 @@
-@keyframes fromLeft {
-  0% {
-    opacity: 0;
-    transform: translate(-10rem); }
-  80% {
-    transform: translate(1rem); }
-  100% {
-    transform: initial;
-    opacity: initial; } }
-
-@keyframes fromRight {
-  0% {
-    opacity: 0;
-    transform: translate(10rem); }
-  80% {
-    transform: translate(-1rem); }
-  100% {
-    transform: initial;
-    opacity: initial; } }
-
-@keyframes fromBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(3rem); }
-  80% {
-    transform: translateY(-0.3rem); }
-  100% {
-    transform: initial;
-    opacity: initial; } }
-
-@keyframes fromTop {
-  0% {
-    opacity: 0;
-    transform: translateY(-3rem); }
-  80% {
-    transform: translateY(0.3rem); }
-  100% {
-    transform: initial;
-    opacity: initial; } }
-
 .fade-in {
   opacity: 0;
   transition: opacity 1.3s;
@@ -620,18 +580,23 @@ h2 {
   z-index: 99;
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s; }
+  transition: opacity 0.3s;
+  cursor: pointer; }
   @supports (backdrop-filter: blur(10px)) or (-webkit-backdrop-filter: blur(10px)) {
     .popup {
       -webkit-backdrop-filter: blur(10px);
       backdrop-filter: blur(10px);
       background-color: rgba(0, 0, 0, 0.7); } }
-  .popup__content-box {
+  .popup--appear {
+    visibility: visible;
+    opacity: 1; }
+  .popup__body {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 70%;
+    cursor: initial;
     background-color: #fff;
     border-radius: 3px;
     box-shadow: 1.5rem 3rem 6rem rgba(0, 0, 0, 0.3);
@@ -640,10 +605,12 @@ h2 {
     transform: translate(-50%, -50%) scale(0);
     transition: 0.8s 0.2s; }
     @media screen and (max-width: 56.25em) {
-      .popup__content-box {
+      .popup__body {
         width: 80%;
         max-height: 70vh;
         overflow-y: auto; } }
+    .popup__body--appear {
+      transform: translate(-50%, -50%) scale(1); }
   .popup__left-side {
     flex-basis: 33.3333333%; }
     @media screen and (max-width: 56.25em) {
@@ -674,11 +641,6 @@ h2 {
     @media screen and (max-width: 56.25em) {
       .popup__text {
         column-count: 1; } }
-  .popup:target {
-    visibility: visible;
-    opacity: 1; }
-    .popup:target .popup__content-box {
-      transform: translate(-50%, -50%) scale(1); }
   .popup__close:link, .popup__close:visited {
     color: #575757;
     position: absolute;
@@ -730,7 +692,6 @@ h2 {
       background: #000;
       border-color: #73d662;
       color: #fff;
-      transform: scale(0.9);
       box-shadow: 1.5rem 3rem 6rem rgba(0, 0, 0, 0.3); }
     .navigation__item:last-child .navigation__link:active, .navigation__item:last-child .navigation__link:focus {
       outline: none;
