fix uncomment animations

--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -1,62 +1,62 @@
-// @keyframes fromLeft {
-//   0% {
-//     opacity: 0;
-//     transform: translate(-10rem);
-//   }
+@keyframes fromLeft {
+  0% {
+    opacity: 0;
+    transform: translate(-10rem);
+  }
 
-//   80% {
-//     transform: translate(1rem);
-//   }
+  80% {
+    transform: translate(1rem);
+  }
 
-//   100% {
-//     transform: initial;
-//     opacity: initial;
-//   }
-// }
+  100% {
+    transform: initial;
+    opacity: initial;
+  }
+}
 
-// @keyframes fromRight {
-//   0% {
-//     opacity: 0;
-//     transform: translate(10rem);
-//   }
+@keyframes fromRight {
+  0% {
+    opacity: 0;
+    transform: translate(10rem);
+  }
 
-//   80% {
-//     transform: translate(-1rem);
-//   }
+  80% {
+    transform: translate(-1rem);
+  }
 
-//   100% {
-//     transform: initial;
-//     opacity: initial;
-//   }
-// }
-// @keyframes fromBottom {
-//   0% {
-//     opacity: 0;
-//     transform: translateY(3rem);
-//   }
+  100% {
+    transform: initial;
+    opacity: initial;
+  }
+}
+@keyframes fromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem);
+  }
 
-//   80% {
-//     transform: translateY(-0.3rem);
-//   }
+  80% {
+    transform: translateY(-0.3rem);
+  }
 
-//   100% {
-//     transform: initial;
-//     opacity: initial;
-//   }
-// }
+  100% {
+    transform: initial;
+    opacity: initial;
+  }
+}
 
-// @keyframes fromTop {
-//   0% {
-//     opacity: 0;
-//     transform: translateY(-3rem);
-//   }
+@keyframes fromTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-3rem);
+  }
 
-//   80% {
-//     transform: translateY(0.3rem);
-//   }
+  80% {
+    transform: translateY(0.3rem);
+  }
 
-//   100% {
-//     transform: initial;
-//     opacity: initial;
-//   }
-// }
+  100% {
+    transform: initial;
+    opacity: initial;
+  }
+}
