--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,43 @@
+@keyframes fromLeft {
+  0% {
+    opacity: 0;
+    transform: translate(-10rem); }
+  80% {
+    transform: translate(1rem); }
+  100% {
+    transform: initial;
+    opacity: initial; } }
+
+@keyframes fromRight {
+  0% {
+    opacity: 0;
+    transform: translate(10rem); }
+  80% {
+    transform: translate(-1rem); }
+  100% {
+    transform: initial;
+    opacity: initial; } }
+
+@keyframes fromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  80% {
+    transform: translateY(-0.3rem); }
+  100% {
+    transform: initial;
+    opacity: initial; } }
+
+@keyframes fromTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-3rem); }
+  80% {
+    transform: translateY(0.3rem); }
+  100% {
+    transform: initial;
+    opacity: initial; } }
+
 .fade-in {
   opacity: 0;
   transition: opacity 1.3s;
