--- a/css/style.css
+++ b/css/style.css
@@ -643,7 +643,7 @@ h2 {
     padding: 0.5rem;
     display: flex;
     transform: translate(-50%, -50%) scale(0);
-    transition: 0.8s 0.2s; }
+    transition: 1.2s 0.5s; }
     @media screen and (max-width: 56.25em) {
       .popup__body {
         width: 80%;
@@ -722,24 +722,7 @@ h2 {
   .navigation__logo {
     height: 4rem;
     padding: 0.3rem; }
-  .navigation__item:last-child .navigation__link {
-    border: 2px solid #f0b002;
-    border-radius: 50px;
-    background: #fff;
-    color: #0b7451;
-    opacity: 1; }
-    .navigation__item:last-child .navigation__link:hover {
-      background: #000;
-      border-color: #73d662;
-      color: #fff;
-      box-shadow: 1.5rem 3rem 6rem rgba(0, 0, 0, 0.3); }
-    .navigation__item:last-child .navigation__link:active, .navigation__item:last-child .navigation__link:focus {
-      outline: none;
-      transform: initial;
-      box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
-    .navigation__item:last-child .navigation__link::after {
-      display: none; }
-  .navigation__link:link, .navigation__link:visited {
+  .navigation__link {
     display: inline-block;
     font-size: 1.8rem;
     font-weight: 500;
@@ -750,22 +733,39 @@ h2 {
     position: relative;
     transition: 0.2s;
     opacity: 0.75; }
-  .navigation__link::after {
-    content: '';
-    height: 0.25rem;
-    border-radius: 5px;
-    position: absolute;
-    left: 2.3rem;
-    right: 2.5rem;
-    bottom: 0.3rem;
-    background: #f0b002;
-    transform: scale(0);
-    transition: 0.3s ease-in-out; }
-  .navigation__link:hover {
-    transform: translateY(-3px);
-    opacity: 1; }
-    .navigation__link:hover::after {
-      transform: scale(1); }
+    .navigation__link::after {
+      content: '';
+      height: 0.25rem;
+      border-radius: 5px;
+      position: absolute;
+      left: 2.3rem;
+      right: 2.5rem;
+      bottom: 0.3rem;
+      background: #f0b002;
+      transform: scale(0);
+      transition: 0.3s ease-in-out; }
+    .navigation__link:hover {
+      transform: translateY(-3px);
+      opacity: 1; }
+      .navigation__link:hover::after {
+        transform: scale(1); }
+    .navigation__link--btn {
+      border: 2px solid #f0b002;
+      border-radius: 50px;
+      background: #fff;
+      color: #0b7451;
+      opacity: 1; }
+      .navigation__link--btn:hover {
+        background: #000;
+        border-color: #73d662;
+        color: #fff;
+        box-shadow: 1.5rem 3rem 6rem rgba(0, 0, 0, 0.3); }
+      .navigation__link--btn:active, .navigation__link--btn:focus {
+        outline: none;
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+        transform: initial; }
+      .navigation__link--btn::after {
+        display: none; }
   @media screen and (max-width: 56.25em) {
     .navigation__button {
       height: 7rem;
@@ -813,23 +813,26 @@ h2 {
     .navigation__logo {
       height: 7rem;
       padding: 0.3rem; }
-    .navigation__link:link, .navigation__link:visited {
+    .navigation__item:not(:last-child) .navigation__link {
       font-size: 3rem;
-      font-weight: 300;
+      font-weight: 500;
       padding: 0.5rem 2.2rem;
       text-decoration: none;
       border-radius: 3px;
       background-image: linear-gradient(120deg, transparent 50%, #fff 50%);
       background-size: 230%;
       transition: 0.4s; }
-      .navigation__link:link::after, .navigation__link:visited::after {
+      .navigation__item:not(:last-child) .navigation__link::after {
         display: none; }
-      .navigation__link:link span, .navigation__link:visited span {
+      .navigation__item:not(:last-child) .navigation__link span {
         margin-right: 1.5rem; }
-    .navigation__link:hover, .navigation__link:active {
-      background-position: right;
-      color: #45b86c;
-      transform: translateX(1rem); }
+      .navigation__item:not(:last-child) .navigation__link:hover, .navigation__item:not(:last-child) .navigation__link:active {
+        background-position: right;
+        color: #45b86c;
+        transform: translateX(1rem); }
+    .navigation__link--btn {
+      font-size: 3rem;
+      font-weight: 500; }
     .navigation__checkbox:checked ~ .navigation__background {
       transform: scale(80); }
     .navigation__checkbox:checked ~ .navigation__nav {
