--- a/sass/base/_transitions.scss
+++ b/sass/base/_transitions.scss
@@ -1,10 +1,13 @@
 .fade-in {
   opacity: 0;
-  transition: opacity 1.3s;
+  transform: scale(0.5);
+  transform-origin: center bottom;
+  transition: all 1.5s;
   pointer-events: none;
 
   &.appear {
     opacity: 1;
+    transform: scale(1);
   }
 }
 
